# oxidize_translations

./: Cargo.toml  README.md
docs/: README.md
docs/.vuepress/: config.js
docs/.vuepress/components/: GithubLatestVersion.vue
src/: lib.rs
src/config/: config.rs
src/errors/: fetcher.rs
src/macros/: translate.rs
src/oxidized_map/: interface.rs  mod.rs  oxidized_map.rs
src/reader/: file_reader.rs  locale_folder.rs  mod.rs  translation_file_filter.rs
