[package]
name = "oxidized_translations"
version = "0.0.1"
description = "Easy and I18n like translations for your applications"
authors = ["Nick Flueckiger <nick.flueckiger@renuo.ch>"]
edition = "2018"
license = 'MIT'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
